# krAIna

./: .flake8  .gitignore  .pydocstyle.ini  LICENSE  README.md  build_standalone.bat  build_standalone.sh  chat.bat  chat.py  chat.sh  config.yaml.template  kraina.bat  kraina.py  kraina.sh  list_skills.bat  list_skills.sh  main.py  main.sh  prompts.db  pyproject.toml  requirements.txt  setup.bat  setup.sh  todo.md
.github/workflows/: build-standalone.yml
app/: chat.py  chat.sh  config.yaml  kraina.bat  kraina.sh  kraina_app.py  kraina_cli.py
app/assistants/bob/: config.yaml  prompt.md
app/macros/: topic_overview.py
app/snippets/solver/: config.yaml  prompt.md
assistants/: assistant.py  base.py
assistants/coder/: config.yaml  prompt.md
assistants/promcreat/: config.yaml  prompt.md
assistants/samantha/: config.yaml
chat/: __init__.py  base.py  chat.py  chat_history.py  chat_history_view.py  chat_images.py  chat_persistence.py  chat_settings.py  cli.py  leftsidebar.py  log_window.py  macro_window.py  main.py  menu.py  menu_macros.py  requirements.txt  scroll_frame.py  scroll_text.py  settings.json  status_bar.py  watch_files.py
copyQ/: README.md  ai_commit.ini  ai_pycharm_commit.ini  ai_screenshot_select_ocr.ini  ai_select.ini  ai_translate.ini  kraina_run.ini  toggle.ini
libs/: MyNotify.py  fernet.py  langfuse.py  llm.py  utils.py
libs/db/: controller.py  model.py
libs/ipc/: client.py  host.py
libs/notification/: MyLinuxNotify.py  MyNotify.py  MyWindowsNotify.py
macros/: base.py  pokemon_overview.py  topic_overview.py
setup_scripts/: .env.template  config.yaml.template  merge_yaml.py  setup.bat  setup.sh
skills/: base.py  skill.py
skills/commit/: prompt.md
skills/fix/: prompt.md
skills/ocr/: overwrite.py
skills/response/: model.yaml  overwrite.py  prompt.md
skills/summary/: config.yaml  prompt.md
skills/translate/: config.yaml  prompt.md
snippets/: base.py  snippet.py
snippets/code/: PostprocessCode.py  config.yaml  prompt.md
snippets/commit/: config.yaml
snippets/docstring/: PostprocessDocstring.py  config.yaml  prompt.md
snippets/fix/: prompt.md
snippets/nameit/: config.yaml  prompt.md
snippets/ocr/: config.yaml  overwrite.py
snippets/response/: overwrite.py
snippets/solve/: prompt.md
snippets/summary/: config.yaml
snippets/translate/: config.yaml
src/kraina/assistants/: __init__.py  assistant.py  base.py
src/kraina/assistants/bob/: config.yaml
src/kraina/assistants/coder/: config.yaml
src/kraina/assistants/echo/: prompt.md
src/kraina/assistants/kodi/: config.yaml  prompt.md
src/kraina/assistants/promcreat/: config.yaml
src/kraina/assistants/samantha/: config.yaml  prompt.md
src/kraina/libs/: __init__.py  images.py  langfuse.py  llm.py  paths.py  utils.py
src/kraina/libs/db/: __init__.py  controller.py  model.py
src/kraina/libs/ipc/: __init__.py  base.py  client.py  host.py
src/kraina/libs/klembord/: readme.md  winclipboard.py  xclipboard.py
src/kraina/libs/notification/: MyLinuxNotify.py  MyNotify.py  MyNotifyInterface.py  MyWindowsNotify.py  __init__.py
src/kraina/macros/: __init__.py  base.py
src/kraina/snippets/: __init__.py  base.py  snippet.py
src/kraina/snippets/code/: PostprocessCode.py  config.yaml
src/kraina/snippets/commit/: config.yaml
src/kraina/snippets/docstring/: PostprocessDocstring.py  config.yaml  prompt.md
src/kraina/snippets/doit/: config.yaml  prompt.md
src/kraina/snippets/gen_image/: config.yaml  prompt.md
src/kraina/snippets/ocr/: config.yaml  overwrite.py  prompt.md
src/kraina/snippets/solve/: config.yaml
src/kraina/snippets/translate/: config.yaml
src/kraina/templates/: .env.template  config-schema.json  config.yaml.template
src/kraina/tools/: __init__.py  audio_to_text.py  base.py  image_analyse.py  include.py  joplin.py  text_to_image.py  text_to_text.py  vector_store.py  vector_store_file_splitter.py
src/kraina_chat/: base.py  chat_history.py  chat_history_view.py  chat_persistence.py  chat_settings.py  cli.py  leftsidebar.py  log_window.py  macro_window.py  main.py  menu.py  scroll_frame.py  scroll_text.py  status_bar.py  toast_popup.py  watch_files.py
tools/: audio_to_text.py  base.py  image_analyse.py  include.py  joplin.py  text_to_image.py  text_to_text.py  vector_store.py  vector_store_file_splitter.py
